--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,31 @@
-image: Visual Studio 2022
+name: CI
 
-build_script:
-  - npm install
-  - npm run build
+on:
+  push:
+    branches:
+      - master
 
-artifacts:
-  - path: dist
-    name: dist
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-deploy:
-  provider: GitHubPages
-  artifact: dist
-  on:
-    branch: master
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist  # Убедись, что здесь правильная папка
